# fullstack-starter

./: .dockerignore  .env.example  .gitignore  AUDIT-RESULTS.md  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml  lint-staged.config.mjs  package-lock.json  package.json
.husky/: pre-commit
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  eslint.config.mjs
core/: AUDIT.md  openapi.json
core/backend-rust/: .env.example  .gitignore  API_ERRORS.md  Cargo.toml  Dockerfile
core/backend-rust/migrations/: 001_create_users.sql
core/backend-rust/src/: config.rs  constants.rs  lib.rs  main.rs
core/backend-rust/src/api/: app_state.rs  mod.rs
core/backend-rust/src/api/extractors/: auth.rs  json.rs  mod.rs
core/backend-rust/src/api/handlers/: auth.rs  health.rs  users.rs
core/backend-rust/src/api/middleware/: error_handling.rs  mod.rs
core/backend-rust/src/api/responses/: mod.rs
core/backend-rust/src/api/routes/: mod.rs
core/backend-rust/src/domain/: errors.rs
core/backend-rust/src/domain/models/: mod.rs  user.rs
core/backend-rust/src/domain/services/: auth.rs  mod.rs  user.rs
core/backend-rust/src/infrastructure/auth/: jwt.rs  mod.rs  password.rs
core/backend-rust/src/infrastructure/db/: mod.rs  user_repo.rs
core/backend-rust/tests/: auth_test.rs  users_test.rs
core/backend-rust/tests/common/: mod.rs
docs/: BACKEND_CHEATSHEET.md  DATABASE_ORM_CHEATSHEET.md  DEPLOYMENT_SERVER_CHEATSHEET.md  FEATURE_REGISTRY.md  FRONTEND_UI_CHEATSHEET.md  MOBILE_FLUTTER_CHEATSHEET.md  MODULES.md  PHASE_CHECKLIST.md  README.md  (+4 more)
(+1343 files in other folders)
